calico_versioned_docs/version-3.27/getting-started/kubernetes/windows-calico/rancher.mdx
---
description: Install Calico for Windows on a Rancher RKE cluster.
---

import variables from '@site/calico_versioned_docs/version-3.27/variables';
import CodeBlock from '@theme/CodeBlock';

# Calico for Windows on a Rancher Kubernetes Engine cluster

## Big picture

Install {variables.prodnameWindows} on a Rancher Kubernetes Engine (RKE) cluster.

## Value

Run Linux and Windows workloads on a RKE cluster with {variables.prodname}.

## Before you begin

**Supported**

- RKE Kubernetes 1.20, 1.19, or 1.18

**Supported networking**

- BGP with no encapsulation
- VXLAN

**Required**

- An RKE cluster provisioned with [no network plugin](https://rancher.com/docs/rke/latest/en/config-options/add-ons/network-plugins#disabling-deployment-of-a-network-plug-in)
  but which otherwise meets the {variables.prodnameWindows} Kubernetes [cluster requirements](requirements.mdx). This guide was tested with RKE v1.18.9.
- One or more Windows nodes that meet the [requirements](requirements.mdx).

## How to

The following steps will outline the installation of {variables.prodname} networking on the RKE cluster, then the installation of {variables.prodnameWindows} on the Windows nodes.

1. Install the Tigera {variables.prodname} operator and custom resource definitions.

   <CodeBlock language=''>
   {`kubectl create -f ${variables.manifestsUrl}/manifests/tigera-operator.yaml`}
   </CodeBlock>

   :::note

   Due to the large size of the CRD bundle, `kubectl apply` might exceed request limits. Instead, use `kubectl create` or `kubectl replace`.

   :::

1. Download the necessary Installation custom resources.

   <CodeBlock language='bash'>
   {`wget ${variables.manifestsUrl}/manifests/custom-resources.yaml`}
   </CodeBlock>

1. Update the `calicoNetwork` options, ensuring that the correct pod CIDR is set. (Rancher uses `10.42.0.0/16` by default.)
   Below are sample installations for VXLAN and BGP networking using the default Rancher pod CIDR:

   **VXLAN**

   ```yaml
   apiVersion: operator.tigera.io/v1
   kind: Installation
   metadata:
     name: default
   spec:
      # Configures Calico networking.
     calicoNetwork:
       bgp: Disabled
        # Note: The ipPools section cannot be modified post-install.
       ipPools:
       - blockSize: 26
         cidr: 10.42.0.0/16
         encapsulation: VXLAN
         natOutgoing: Enabled
         nodeSelector: all()
   ```

   **BGP**

   ```yaml
   apiVersion: operator.tigera.io/v1
   kind: Installation
   metadata:
     name: default
   spec:
      # Configures Calico networking.
     calicoNetwork:
        # Note: The ipPools section cannot be modified post-install.
       ipPools:
       - blockSize: 26
         cidr: 10.42.0.0/16
         encapsulation: None
         natOutgoing: Enabled
         nodeSelector: all()
   ```

   :::note

   For more information on configuration options available in this manifest, see [the installation reference](../../../reference/installation/api.mdx).

   :::

1. Apply the updated custom resources:

   ```bash
   kubectl create -f custom-resources.yaml
   ```

1. Configure strict affinity:

   ```bash
   kubectl patch ipamconfigurations default --type merge --patch='{"spec": {"strictAffinity": true}}'
   ```

1. Finally, install {variables.prodnameWindows}. For an operator installation, follow the [operator guide](operator.mdx).
   For manual installation, follow the [quickstart guide](manual-install/quickstart.mdx#install-calico-for-windows-manually).
   For VXLAN clusters, follow the instructions under the "Kubernetes VXLAN" tab. For BGP clusters, follow the instructions under the "Kubernetes BGP" tab.

   :::note

   For Rancher default values for service CIDR and DNS cluster IP, see the [Rancher kube-api service options](https://rancher.com/docs/rke/latest/en/config-options/services/#kubernetes-api-server-options).

   :::

1. Check the status of the nodes with `kubectl get nodes`. If you see that the Windows node has the status `Ready`, then you have a {variables.prodnameWindows} on RKE cluster ready for Linux and Windows workloads!

## Next steps

- [Try the basic policy demo](demo.mdx)
- [Secure pods with {variables.prodname} network policy](../../../network-policy/get-started/calico-policy/calico-network-policy.mdx)
